k8s/ingress-tls.yml
# This setup requires a valid domain name from providers such as Hostinger, Namecheap, etc.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: expensy-ingress-tls
  namespace: expensy
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"

spec:
  ingressClassName:  "nginx"
  # use the tls certificate generated by Certbot
  tls:
  - hosts:
    - najhack.online
    secretName: expensy-tls-cert  # cert is stored in a Kubernetes secret 
  rules:
    - host: najhack.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service  # Backend service for path /api
                port:
                  number: 8706  # Port exposed by the backend service
